# crystal_rapidfuzz

./: CMakeLists.txt  LICENSE  README.md  shard.yml
.github/workflows/: crystal.yml
spec/: rapidfuzz_spec.cr  spec_helper.cr
src/: benchmarks.cr  compare_diff.cr  rapidfuzz.cr  rapidfuzz_wrap.cpp
